fix: Adjust scrollbar height for consistent styling

--- a/app/app.css
+++ b/app/app.css
@@ -22,6 +22,7 @@ img {
 
 ::-webkit-scrollbar {
   width: 2px;
+  height: 2px;
   @apply bg-gray-200 dark:bg-gray-800;
 }
 
